# libvcard

./: CMakeLists.txt
libvcard/: vcard.cpp  vcardproperty.cpp
